--- a/MvcApp/MvcApp.csproj
+++ b/MvcApp/MvcApp.csproj
@@ -61,6 +61,9 @@
     <Reference Include="Microsoft.Practices.Unity.RegistrationByConvention">
       <HintPath>..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Practices.Unity.WebApi">
+      <HintPath>..\packages\Unity.AspNet.WebApi.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.WebApi.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
@@ -86,9 +89,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Microsoft.AspNet.WebPages.3.1.2\lib\net45\System.Web.Helpers.dll</HintPath>
     </Reference>
-    <Reference Include="System.Web.Http, Version=5.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+    <Reference Include="System.Web.Http, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.2\lib\net45\System.Web.Http.dll</HintPath>
+      <HintPath>bin\System.Web.Http.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.Http.WebHost, Version=5.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -121,6 +124,9 @@
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
     <Reference Include="System.Xml.Linq" />
+    <Reference Include="Unity.WebApi">
+      <HintPath>..\packages\Unity.WebAPI.5.1\lib\net45\Unity.WebApi.dll</HintPath>
+    </Reference>
     <Reference Include="WebActivatorEx">
       <HintPath>..\packages\WebActivatorEx.2.0.5\lib\net40\WebActivatorEx.dll</HintPath>
     </Reference>
@@ -957,8 +963,9 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\jstree.js" />
     <Content Include="Scripts\jstree.min.js" />
-    <Content Include="Scripts\jsTree3\jstree.js" />
-    <Content Include="Scripts\jsTree3\jstree.min.js" />
+    <Content Include="Scripts\myScripts\angular.treeview.js" />
+    <Content Include="Scripts\myScripts\jquery-1.10.2.js" />
+    <Content Include="Scripts\myScripts\angular.js" />
     <Content Include="Scripts\themes\default\32px.png" />
     <Content Include="Scripts\themes\default\40px.png" />
     <Content Include="Scripts\themes\jquery-ui.css" />
@@ -967,7 +974,6 @@
     <Content Include="Scripts\themes\default\throbber.gif" />
     <Content Include="Scripts\myCSS\treeview.css" />
     <Content Include="Scripts\myScripts\App.js" />
-    <Content Include="Scripts\myScripts\treeview.js" />
     <Content Include="Scripts\myScripts\catalogCtrl.js" />
     <Content Include="Scripts\myScripts\catalogService.js" />
     <Content Include="Web.config" />
@@ -976,11 +982,13 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\UnityConfig.cs" />
     <Compile Include="App_Start\UnityMvcActivator.cs" />
+    <Compile Include="App_Start\UnityHttpControllerActivator.cs" />
+    <Compile Include="App_Start\UnityWebApiActivator.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CatalogViewController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\WebApiControllers\CatalogsViewController.cs" />
+    <Compile Include="Controllers\CatalogTreeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -1002,12 +1010,12 @@
     <Content Include="Scripts\jquery-2.1.1.min.map" />
     <Content Include="Scripts\version.json" />
     <Content Include="Views\CatalogView\Index.cshtml" />
-    <Content Include="Views\CatalogView\ChildNode.cshtml" />
-    <Content Include="Views\CatalogView\RecordView.cshtml" />
-    <Content Include="Views\CatalogView\Documents.cshtml" />
-    <Content Include="Views\CatalogView\Video.cshtml" />
-    <Content Include="Views\CatalogView\Photo.cshtml" />
-    <Content Include="Views\CatalogView\TechnicalCharacteristic.cshtml" />
+    <Content Include="Views\CatalogView\_ChildNode.cshtml" />
+    <Content Include="Views\CatalogView\_RecordView.cshtml" />
+    <Content Include="Views\CatalogView\_Documents.cshtml" />
+    <Content Include="Views\CatalogView\_Video.cshtml" />
+    <Content Include="Views\CatalogView\_Photo.cshtml" />
+    <Content Include="Views\CatalogView\_TechnicalCharacteristic.cshtml" />
     <Content Include="Views\CatalogView\Compare.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
