--- a/MvcApp/packages.config
+++ b/MvcApp/packages.config
@@ -27,8 +27,10 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net451" />
   <package id="Unity" version="3.5.1404.0" targetFramework="net45" />
+  <package id="Unity.AspNet.WebApi" version="3.5.1404.0" targetFramework="net451" />
   <package id="Unity.Interception" version="3.5.1404.0" targetFramework="net45" />
   <package id="Unity.Mvc" version="3.5.1404.0" targetFramework="net45" />
   <package id="Unity.Mvc4" version="1.4.0.0" targetFramework="net451" />
+  <package id="Unity.WebAPI" version="5.1" targetFramework="net451" />
   <package id="WebActivatorEx" version="2.0.5" targetFramework="net45" />
 </packages>
